@@ -1026,6 +1026,7 @@ renumber_programs (void)
 static char *
 function_exists ( char *fun, object_t *ob, Bool show_hidden
                 , char ** prog_name, uint32 * prog_line
+                , int * num_arg,  funflag_t * fun_flags, int * fun_type
                 )
 
 /* Search for the function <fun> in the object <ob>. If existing, return
@@ -1051,6 +1052,10 @@ function_exists ( char *fun, object_t *ob, Bool show_hidden
         fatal("function_exists() on destructed object\n");
 #endif
 
+    memset(fun_type, 0, sizeof(*fun_type));
+    *num_arg = 0;
+    *fun_flags = 0;
+
     if (prog_name)
         *prog_name = NULL;
 
@@ -1071,6 +1076,7 @@ function_exists ( char *fun, object_t *ob, Bool show_hidden
 
     /* Is it visible for the caller? */
     flags = progp->functions[ix];
+    *fun_flags = (flags & ~INHERIT_MASK);
 
     if (!show_hidden
      && (   flags & TYPE_MOD_PRIVATE
@@ -1091,10 +1097,15 @@ function_exists ( char *fun, object_t *ob, Bool show_hidden
 
     funstart = progp->program  + (flags & FUNSTART_MASK);
 
+    /* Set the additional information */
+    *num_arg = FUNCTION_NUM_ARGS(funstart) & 0x7f;
+    *fun_type = flags & TYPE_MOD_MASK;
+
     /* And after all this, the function may be undefined */
     if (FUNCTION_CODE(funstart)[0] == F_ESCAPE
      && FUNCTION_CODE(funstart)[1] == F_UNDEF  - 0x100)
     {
+        *fun_flags |= NAME_UNDEFINED;
         return NULL;
     }
 
@@ -1133,8 +1144,17 @@ f_function_exists (svalue_t *sp, int num_arg)
  *   Return the line number within the source file.
  *
  * <flags> == FEXISTS_ALL (3):
- *   Return an array with all the above information. The above
- *   flag values are the indices into that array.
+ *   Return an array with all the above information, plus information
+ *   about the function type/flags/number of arguments.
+ *
+ *   The returned array contains this information:
+ *     string [FEXISTS_PROGNAME]: the program name
+ *     string [FEXISTS_FILENAME]: the filename
+ *     int    [FEXISTS_LINENO]:   the linenumber
+ *     int    [FEXISTS_NUMARG]:   the number of arguments to the function
+ *     int    [FEXISTS_TYPE]:     the return type of the function
+ *     int    [FEXISTS_FLAGS]:    the function flags
+ *
  *
  * The <flags> value can be or-ed to NAME_HIDDEN to return
  * information about static and protected functions in other objects.
@@ -1150,6 +1170,10 @@ f_function_exists (svalue_t *sp, int num_arg)
     svalue_t *argp;
     object_t *ob;
     p_int mode_flags;
+
+    funflag_t fun_flags;
+    int       fun_num_arg;
+    int       fun_type;
 
     /* Evaluate arguments */
     argp = sp - num_arg + 1;
@@ -1236,7 +1260,8 @@ f_function_exists (svalue_t *sp, int num_arg)
     /* Get the information */
     prog_name = NULL;
     str = function_exists( argp->u.string, ob, (mode_flags & NAME_HIDDEN)
-                         , &prog_name, &prog_line);
+                         , &prog_name, &prog_line
+                         , &fun_num_arg, &fun_flags, &fun_type);
     sp = pop_n_elems(num_arg, sp);
 
     if (str)
@@ -1270,7 +1295,7 @@ f_function_exists (svalue_t *sp, int num_arg)
             {
                 errorf("Out of memory\n");
             }
-            vec = allocate_uninit_array(FEXISTS_LINENO+1);
+            vec = allocate_uninit_array(FEXISTS_FLAGS+1);
             put_malloced_string(vec->item+FEXISTS_PROGNAME, res);
             if (prog_name)
             {
@@ -1290,6 +1315,10 @@ f_function_exists (svalue_t *sp, int num_arg)
                 vec->item[FEXISTS_FILENAME].u.number = 0;
             }
             put_number(vec->item+FEXISTS_LINENO, prog_line);
+
+            put_number(vec->item+FEXISTS_NUMARG, fun_num_arg);
+            put_number(vec->item+FEXISTS_TYPE, fun_type);
+            put_number(vec->item+FEXISTS_FLAGS, (p_int)fun_flags);
 
             sp++;
             put_array(sp, vec);
