@@ -4,11 +4,14 @@ the host system.
 
 For a detailed list of all changes see the file CHANGELOG.
 
-26-Nov-2005 (Lars Duening) -- upcoming Release 3.2.12
+27-Nov-2005 (Lars Duening) -- Release 3.2.12
 
     - Changed efuns:
       + md5(): Accept number arrays as arguments as well.
       + md5(): Accept the number of iterations as optional argument.
+      + function_exists(): The 'FEXISTS_ALL' result also contains
+         information about the function's type, flags, and number of
+         arguments.
       + sscanf():  Added test whether the constant characters after
           a %-field also match - if not, the %-field is considered unmatched.
       + tls_check_certificate(): Return the low-level API results, and throw
