@@ -1,6 +1,11 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+27-Nov-2005  (Lars Duening)
+  - (object.c) Efun function_exists(): The 'FEXISTS_ALL' result also contains
+      information about the function's type, flags, and number of
+      arguments (Bug #410).
+
 26-Nov-2005  (Lars Duening)
   - (efuns.c) Efun sscanf(): Added test whether the constant characters after
       a %-field also match - if not, the %-field is considered unmatched
